--- a/_pages/about.html
+++ b/_pages/about.html
@@ -18,7 +18,7 @@ redirect_from:
 
 <h1>Navigation</h1>
 <p>
-  All the written reports can be found in the <a href="/reports/">Reports</a> page. All reports are also listed below (most recent first) for ease of access. The <a href="/Gallery/">Gallery</a> page contains all images and videos used in the reports.
+  All the written reports can be found in the <a href="/reports/">Reports</a> page. All reports are also listed below (most recent first) for ease of access.
 </p>
 
 <h1>Reports</h1>
