--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,6 +7,8 @@ redirect_from:
   - /about.html
 ---
 
+{% include base_path %}
+
 <p>
   This website hosts written reports for CMPUT 412 - Experimental Mobile Robotics offered at the University of Alberta in Winter 2025.
 </p>
@@ -18,7 +20,7 @@ redirect_from:
 
 <h1>Navigation</h1>
 <p>
-  All the written reports can be found in the <a href="/reports/">Reports</a> page. All reports are also listed below (most recent first) for ease of access.
+All the written reports can be found in the <a href="{{ base_path }}/reports/">Reports</a> page. All reports are also listed below (most recent first) for ease of access.
 </p>
 
 <h1>Reports</h1>
