--- a/_reports/exercise-1.html
+++ b/_reports/exercise-1.html
@@ -110,3 +110,16 @@ date: 2025-01-16
   Despite the occasional frustrations, I have learned to be patient with the Duckiebots.
 </p>
 
+<h1>References</h1>
+<ul>
+  <li>
+    <a href="https://docs-old.duckietown.org/daffy/duckietown-robotics-development/out/python_programs_environments.html">
+      https://docs-old.duckietown.org/daffy/duckietown-robotics-development/out/python_programs_environments.html
+    </a>
+  </li>
+  <li>
+    <a href="https://docs.duckietown.com/daffy/opmanual-duckiebot/setup/setup_laptop/setup_dependencies.html">
+      https://docs.duckietown.com/daffy/opmanual-duckiebot/setup/setup_laptop/setup_dependencies.html
+    </a>
+  </li>
+</ul>
