added kinematics image

--- a/_reports/exercise-1.html
+++ b/_reports/exercise-1.html
@@ -57,6 +57,13 @@ date: 2025-01-16
   The camera extrinsic calibration file. Extrinsic calibration parameters are used to determine the position of the camera in the world.
 </p>
 
+<h2>Kinematics Calibration</h2>
+<img src="{{ base_path }}/images/kinematics.png" alt="Kinematics calibration file">
+<p>
+  The kinematics calibration file. Kinematics calibration accounts for the varying degrees of defects in the Duckiebot's motors and wheels.
+</p>
+
+
 <h2>Duckiebot Greeting</h2>
 <img src="{{ base_path }}/images/hello_world.png" alt="Duckiebot running a hello world program from a Docker image">
 <p>
