reference links open in new tab

--- a/_reports/exercise-1.html
+++ b/_reports/exercise-1.html
@@ -120,12 +120,12 @@ date: 2025-01-16
 <h1>References</h1>
 <ul>
   <li>
-    <a href="https://docs-old.duckietown.org/daffy/duckietown-robotics-development/out/python_programs_environments.html">
+    <a href="https://docs-old.duckietown.org/daffy/duckietown-robotics-development/out/python_programs_environments.html" target="_blank">
       https://docs-old.duckietown.org/daffy/duckietown-robotics-development/out/python_programs_environments.html
     </a>
   </li>
   <li>
-    <a href="https://docs.duckietown.com/daffy/opmanual-duckiebot/setup/setup_laptop/setup_dependencies.html">
+    <a href="https://docs.duckietown.com/daffy/opmanual-duckiebot/setup/setup_laptop/setup_dependencies.html" target="_blank">
       https://docs.duckietown.com/daffy/opmanual-duckiebot/setup/setup_laptop/setup_dependencies.html
     </a>
   </li>
